--- a/kv files/toolbar.kv
+++ b/kv files/toolbar.kv
@@ -1,7 +1,7 @@
 <ToolBarC@BoxLayout>:
 
     MDToolbar:
-        md_bg_color: app.theme_cls.primary_color
+        md_bg_color: (.108, .114, .126, 1)
         #left_action_items: [['home', lambda x: app.root.changeScreen()]]
 
         MDIconButton:
