align toolbar buttons

--- a/kv files/toolbar.kv
+++ b/kv files/toolbar.kv
@@ -2,24 +2,28 @@
 
     MDToolbar:
         md_bg_color: (.108, .114, .126, 1)
-        #left_action_items: [['home', lambda x: app.root.changeScreen()]]
+        FloatLayout:
+            
+            #left_action_items: [['home', lambda x: app.root.changeScreen()]]
 
-        MDIconButton:
-            icon:'home'
-            elevation: 0
-            #md_bg_color: app.theme_cls.primary_color
-            user_font_size: "40sp"
-            on_release: app.root.current = 'hometab'
-        MDIconButton:
-            icon:'weight-lifter'
-            elevation: 0
-            #md_bg_color: app.theme_cls.primary_color
-            user_font_size: "40sp"
-            on_release: app.root.current = 'workouttab'
-        MDIconButton:
-            icon:'settings-outline'
-            elevation: 0
-            #md_bg_color: app.theme_cls.primary_color
-            user_font_size: "40sp"
-            text_color: app.theme_cls.primary_color
-            on_release: app.root.current = 'settingstab'
+            MDIconButton:
+                icon:'home'
+                elevation: 0
+                #md_bg_color: app.theme_cls.primary_color
+                user_font_size: "40sp"
+                on_release: app.root.current = 'hometab'
+            MDIconButton:
+                icon:'weight-lifter'
+                elevation: 0
+                #md_bg_color: app.theme_cls.primary_color
+                user_font_size: "40sp"
+                on_release: app.root.current = 'workouttab'
+                pos_hint:{'center_x':.03}
+            MDIconButton:
+                icon:'settings-outline'
+                elevation: 0
+                #md_bg_color: app.theme_cls.primary_color
+                user_font_size: "40sp"
+                text_color: app.theme_cls.primary_color
+                on_release: app.root.current = 'settingstab'
+                pos_hint:{'x':.7}
