--- a/kv files/home.kv
+++ b/kv files/home.kv
@@ -17,24 +17,24 @@
         pos_hint: {"x":0, "top": .4}
         cols:1
         Button:
-            text: 'Workout Day 1:\n\nTier 1: Squat\n\nTier 2: Bench Press\n3x8 150lbs'
+            text: 'Workout Day 1:\n\nTier 1: Squat\n5x3 315lbs\n\nTier 2: Bench Press\n3x8 150lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.03, 'top':1}
-            on_press:
+            on_release:
                 background_color: (.108, .114, .126, 1)
         Button:
-            text: 'Workout Day 2:\n\nTier 1: Squat\n\nTier 2: Bench Press\n3x8 150lbs'
+            text: 'Workout Day 2:\n\nTier 1: Overhead\n6x2 125lbs\n\nTier 2: Deadlift\n3x6 250lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.53, 'top':1}
         Button:
-            text: 'Workout Day 3:\n\nTier 1: Squat\n\nTier 2: Bench Press\n3x8 150lbs'
+            text: 'Workout Day 3:\n\nTier 1: Bench Press\n5x3 215lbs\n\nTier 2: Squat\n3x10 215lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.03, 'top':.5}
         Button:
-            text: 'Workout Day 4:\n\nTier 1: Squat\n\nTier 2: Bench Press\n3x8 150lbs'
+            text: 'Workout Day 4:\n\nTier 1: Deadlift\n10x1 335lbs\n\nTier 2: Overhead\n3x6 100lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.53, 'top':.5}
