change button down color to match color scheme

--- a/kv files/home.kv
+++ b/kv files/home.kv
@@ -21,21 +21,23 @@
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.03, 'top':1}
-            on_release:
-                background_color: (.108, .114, .126, 1)
+            background_down: 'buttonDown.png'
         Button:
             text: 'Workout Day 2:\n\nTier 1: Overhead\n6x2 125lbs\n\nTier 2: Deadlift\n3x6 250lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.53, 'top':1}
+            background_down: 'buttonDown.png'
         Button:
             text: 'Workout Day 3:\n\nTier 1: Bench Press\n5x3 215lbs\n\nTier 2: Squat\n3x10 215lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.03, 'top':.5}
+            background_down: 'buttonDown.png'
         Button:
             text: 'Workout Day 4:\n\nTier 1: Deadlift\n10x1 335lbs\n\nTier 2: Overhead\n3x6 100lbs'
             halign: 'center'
             size_hint: .45,.45
             pos_hint: {'x':0.53, 'top':.5}
+            background_down: 'buttonDown.png'
         
